<resources>
    <string name="app_name">Farmers Marketplace</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>

    <string name="login">Login</string>
    <string name="register">REGISTER</string>

    <!-- Button String -->
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_store">StoreActivity</string>


</resources>