<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".community.CommunityJoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register Community"
            android:textSize="28sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:hint="@string/name"
            android:background="@drawable/bg_edittext"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/email"
            android:background="@drawable/bg_edittext"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/phone"
            android:background="@drawable/bg_edittext"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:background="@drawable/bg_edittext"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_register"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Already have a community?"/>

        <Button
            android:id="@+id/btn_goto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JOIN"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

</LinearLayout>